// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackStatus creates correct snapshot for status types 1`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-textInvert-2"
  style={
    Object {
      "backgroundColor": "#bbdefb",
    }
  }
  type="caption"
>
  Requested
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 2`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-text-1"
  style={
    Object {
      "backgroundColor": "#2196f3",
    }
  }
  type="caption"
>
  Creating
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 3`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-text-1"
  style={
    Object {
      "backgroundColor": "#4caf50",
    }
  }
  type="caption"
>
  Ready
</WithStyles(ForwardRef(Typography))>
`;

exports[`StackStatus creates correct snapshot for status types 4`] = `
<WithStyles(ForwardRef(Typography))
  align="center"
  className="StackStatus-textInvert-2"
  style={
    Object {
      "backgroundColor": "#fdd835",
    }
  }
  type="caption"
>
  Unavailable
</WithStyles(ForwardRef(Typography))>
`;
